--- a/gatsby-starter-dimension/src/assets/scss/base/_typography.scss
+++ b/gatsby-starter-dimension/src/assets/scss/base/_typography.scss
@@ -63,7 +63,6 @@
 		font-weight: _font(weight-bold);
 		line-height: 1.5;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		text-transform: uppercase;
 		letter-spacing: _font(letter-spacing);
 
 		a {
@@ -83,7 +82,9 @@
 	}
 
 	h1 {
-		font-size: 2.25rem;
+		font-size: 3.5rem;
+		font-family: 'Playfair Display', serif;
+		font-style: italic;
 		line-height: 1.3;
 		letter-spacing: _font(letter-spacing-heading);
 	}
