--- a/gatsby-starter-dimension/src/assets/scss/main.scss
+++ b/gatsby-starter-dimension/src/assets/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'libs/skel';
 @import '../css/font-awesome.min.css';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700i');
 
 /*
 	Dimension by HTML5 UP
